--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -24,9 +24,13 @@
 }
 
 .title::before {
-  content: "";
+  content: '';
   display: block;
   height: 2rem;
   width: 6px;
   background: linear-gradient(71.17deg, #4000fe 19.35%, #884dff 90.12%);
+}
+
+.login_message {
+  color: #ff0000;
 }
