--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -32,12 +32,17 @@
 }
 
 .link:hover {
-  color: #6f0080;
+  color: #4667a3;
+}
+
+.active,
+.active:hover {
+  color: #0043c0;
 }
 
 .separator {
   width: 100%;
   height: 1px;
-  background-color: #333;
+  background-color: #777;
   margin: 0.5rem 0 1rem 0;
 }
