--- a/src/app/(app)/students/students.module.css
+++ b/src/app/(app)/students/students.module.css
@@ -24,29 +24,10 @@
   gap: 0.5rem;
 }
 
-.title > button {
-  color: #e6e6e6;
-  background-color: #260080;
-  font-size: 1rem;
-  font-weight: 700;
-  padding: 0.5rem 1rem;
-  border: 1px solid #260080;
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.5rem;
-  cursor: pointer;
-  transition: 0.15s;
-}
-
-.title > button:hover {
-  background-color: #4619b1;
-}
-
 .students_container {
   overflow: auto;
   display: grid;
+  grid-template-rows: auto 1fr;
 }
 
 .students_list {
