--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,12 @@
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
+
+.modal_bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
