--- a/src/components/student/student-navigation/student-navigation.module.css
+++ b/src/components/student/student-navigation/student-navigation.module.css
@@ -1,13 +1,8 @@
-.bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-}
-
 .student_navigation_content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(-50%);
   z-index: 50;
 }
 
@@ -44,8 +39,9 @@
 .item {
   color: #555;
   font-weight: 700;
+  font-size: 0.92rem;
   width: 8rem;
-  padding: 0.25rem 0.75rem;
+  padding: 0.5rem 0.75rem;
   display: flex;
   align-items: center;
   gap: 0.75rem;
