--- a/src/components/student/new-student/new-student.module.css
+++ b/src/components/student/new-student/new-student.module.css
@@ -1,3 +1,13 @@
+.bg {
+  width: 100%;
+  height: 100%;
+  background-color: #00000040;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
 .new_button {
   color: #e6e6e6;
   background-color: #260080;
@@ -5,7 +15,7 @@
   font-weight: 700;
   padding: 0.5rem 1rem;
   border: 1px solid #260080;
-  border-radius: 4px;
+  border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -22,7 +32,7 @@
   width: 384px;
   background-color: #e6e6e6;
   border: 1px solid #d9d9d9;
-  border-radius: 4px;
+  border-radius: 8px;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -73,7 +83,7 @@
   background-color: #ffffff20;
   padding: 0.5rem 0.75rem;
   border: 1px solid #b9b9b9;
-  border-radius: 4px;
+  border-radius: 8px;
   transition: 0.15s;
 }
 
@@ -99,7 +109,7 @@
   background-color: transparent;
   font-weight: 700;
   border: 1px solid transparent;
-  border-radius: 4px;
+  border-radius: 8px;
   padding: 0.375rem 1.25rem;
   transition: 0.15s;
   cursor: pointer;
