--- a/src/app/(app)/students/students.module.css
+++ b/src/app/(app)/students/students.module.css
@@ -54,3 +54,38 @@
   padding: 0 1rem;
   margin-bottom: 0.75rem;
 }
+
+
+/* Student */
+
+.studentContainer  {
+  padding: 1rem 4rem;
+}
+  
+.studentTitle {
+  margin-bottom: 1.25rem;
+  width: 40%;
+  padding-bottom: 0.75rem;
+  border-bottom: 1px solid #ccc;
+}
+
+.studentInfoContainer {
+  display: grid;
+  gap: 1rem;
+}
+
+.studentInformation {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  width: 40%;
+  background-color: #f5f5f5;
+  border: 1px solid #eee;
+  color: #333;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.studentInfoName {
+  font-weight: 600;
+}
