--- a/src/components/student/student.module.css
+++ b/src/components/student/student.module.css
@@ -3,15 +3,25 @@
   background-color: #eee;
   color: #333;
   display: grid;
-  grid-template-columns: 4rem 0.2fr 1fr 0.8fr 0.8fr 3.5rem;
+  grid-template-columns: 4rem 0.2fr 1fr 0.8fr 0.8fr 5rem 0.25rem;
+  align-items: center;
   cursor: pointer;
+}
+
+.student .eye {
+  width: 0.125rem;
+  display: block;
+}
+
+.student img {
+  width: 1.25rem;
 }
 
 .student:hover {
   background-color: #e6e6e6;
 }
 
-.student > * {
+.student>* {
   font-size: 0.92rem;
   letter-spacing: 0.25px;
   line-height: 1.5;
