--- a/src/components/home/home-dashboard/home-dashboard.module.css
+++ b/src/components/home/home-dashboard/home-dashboard.module.css
@@ -34,3 +34,9 @@
   font-weight: 700;
   padding: 0 1.5rem;
 }
+
+@media screen and (width < 1024px) {
+  .charts {
+    grid-template-columns: 1fr;
+  }
+}
