--- a/src/components/student/student-navigation/student-navigation.module.css
+++ b/src/components/student/student-navigation/student-navigation.module.css
@@ -23,11 +23,12 @@
 .content {
   background-color: #d9d9d9;
   border: 1px solid #999;
-  border-radius: 4px;
+  border-radius: 8px;
   position: absolute;
   top: 0.25rem;
   right: -0.5rem;
   transform: translateX(-50%);
+  overflow: hidden;
 }
 
 .content > ul {
@@ -49,6 +50,6 @@
 }
 
 .item:hover {
-  background-color: #800080;
-  color: #fff;
+  background-color: #260080;
+  color: #e6e6e6;
 }
